# chess_harmony

./: CMakeLists.txt  README.md
cmake/: temp.md
include/: aliases.h  bitboard.h  chess_vars.h  constants.h  constants_utils.h  position.h  square.h  square_utils.h  temp.md  utils.h
libs/: temp.md
md_assets/: temp.md
src/board/: temp.cpp
src/module2/: module1.cpp
